# Venom

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CHANGES.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  SOURCE_MANIFEST.sha256  SOURCE_MANIFEST.txt  SUPPORT.md  V1.30.8-NOTES.md  toolchains.lock.json  venom.toml.example
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  compatibility_issue.yml  config.yml  feature_request.yml  security_question.yml
.github/workflows/: browser-runtime.yml  browser-validation.yml  build.yml  certification.yml  performance.yml  readiness.yml  release-hardening.yml  release-qualification.yml  release.yml  reproducibility.yml  security.yml
cmake/: build_acceleration.cmake  options.cmake  platforms.cmake  source_domains.cmake  tests.cmake  warnings.cmake
cmake/templates/: version.hpp.in
contracts/: README.md  abi-lock.json  browser-certification.json  browser-fixture.schema.json  browser-performance.json  diagnostics.json  examples.json  final-release.json  host-api.json  product-contracts.json  quickjs-wasm-abi.json  release-certification.json  runtime-api.json  runtime-benchmark.json  runtime-performance.json  runtime-resource-policy.json  runtime-startup.json  turbojs-wasm-abi.json
docs/: COMPATIBILITY-EVIDENCE.md  MAINTENANCE.md  PROTECTED-BRIDGE.md  PROTECTED-CONTRACTS.md  PROTECTED-MODULES.md  README.md  RELEASE-CHECKLIST.md  RELEASE-QUALIFICATION.md  STABLE-CONTRACTS.md  STYLE-GUIDE.md  architecture.md  browser-performance.md  browser-runtime-compatibility-harness.md  browser-validation.md  capability-analysis.md  capability-secure-browser-bridge.md  cli-contract.md  compatibility-correctness-expansion.md  compatibility-evidence.md  compatibility.md  configuration.md  contract-system.md  cryptographic-release-model.md  dual-vm-architecture.md  dynamic-module-graphs.md  emscripten-build.md  emscripten-runtime-value-probe.md  emscripten-windows-quoting-fix.md  fixture-driven-compatibility.md  fpcollect-binding-collision-hotfix.md  framework-compatibility.md  framework-support-policy.md  fuzzing-adversarial-validation.md  getting-started.md  hard-resource-limits.md  hardened-dist-analysis.md  hardened-release-enforcement.md  host-api-bridge-implementation.md  host-api-expansion.md  host-call-bridge-parity.md  (+38 more)
docs/architecture/: AST_CAPTURE_ANALYSIS.md  AST_SYMBOL_CLOSURE.md  HTML_SCRIPT_CLASSIFICATION.md  JAVASCRIPT_AST_FRONTEND.md  ast-call-graph.md  ast-module-exports.md  browser-module-linking.md  build-performance.md  canonical-module-graph.md  chrome-extension-rpc.md  compiler-pipeline.md  dependency-rules.md  distribution-layout.md  dynamic-module-boundaries.md  hardener-performance.md  overview.md  package-format.md  package-plan.md  package-section-planning.md  product-overview.md  protected-runtime.md  quickjs-wasm-abi-contract.md  route-hydration.md  runtime-api.md  runtime-modules.md  source-layout.md  trust-boundaries.md  turbojs-wasm-abi-contract.md  typescript-frontend.md  v2-overview.md
docs/audit/: README.md  findings-register.md  phase-1a-fixed-findings.md  phase-1a-implementation-report.md  phase-1a-residual-risk.md  phase-1a-test-results.md  phase-1b-protection-intent-ledger.md  phase-1c-whole-file-closure-report-2026-07-14.md  phase-1d-signed-browser-release-root-2026-07-14.md  phase-1e-quickjs-record-count-fix-2026-07-14.md  phase-1e-turbojs-record-count-fix-2026-07-14.md  phase-1f-structural-bytecode-accounting-2026-07-14.md  phase-1g-dual-format-bytecode-accounting-2026-07-14.md  phase-1h-bot-telemetry-clock-domain-fix-2026-07-14.md  phase-2a-syntax-aware-arrow-lowering-2026-07-14.md  phase-2b-exported-multiline-arrow-lowering-2026-07-14.md  phase-2c-balanced-arrow-parameter-lowering-2026-07-14.md  phase-2d-balanced-named-function-parameters-2026-07-14.md  remediation-plan.md  (+20 more)
fuzz/: package_parser_fuzz.cpp  package_parser_replay.cpp  runtime_contract_fuzz.cpp
runtime/: turbojs-runtime.wasm
scripts/: README.md  analyze-dist.bat  analyze-dist.ps1  analyze-dist.sh  benchmark-runtime.ps1  benchmark-runtime.sh  bot-detection.bat  bot-detection.ps1  bot-detection.sh  browser-performance.bat  browser-performance.ps1  browser-performance.sh  browser-validate.bat  browser-validate.ps1  browser-validate.sh  build-and-serve-example.ps1  build-emscripten.bat  build-emscripten.ps1  build-emscripten.sh  build-pgo.ps1  build-pgo.sh  build-quickjs-wasm.bat  build-quickjs-wasm.ps1  build-quickjs-wasm.sh  build-route-wasm.ps1  build-route-wasm.sh  build-site.bat  build-site.ps1  build-site.sh  build.bat  build.ps1  build.sh  check-production-leaks.py  check-release-closure.ps1  check-release-closure.sh  check-release-metadata.bat  clean.bat  clean.ps1  clean.sh  compatibility.bat  (+61 more)
src/: README.md
tests/: compatibility-report-smoke.py  compatibility-suite.json  console-output-smoke.py  release_contract_smoke.py  release_package_layout_smoke.py  update-release-smoke.py
tools/: aggregate_certification.py  analyze_dist.py  benchmark_build.py  benchmark_runtime.py  browser_equivalence.py  browser_performance.py  browser_validation.py  build_and_launch_example.py  build_emscripten.py  build_performance.py  build_route_wasm.py  certify_examples.py  certify_release.py  check_contract_upgrade.py  check_example_registry.py  check_generated_artifacts.py  check_package_wasm_abi.py  check_production_leaks.py  check_release_metadata.py  check_reproducibility.py  check_source_inventory.py  check_wasm_release_strings.py  compatibility_matrix.py  console_output.py  core_release_closure.py  dev_server.py  dist_release_root.py  documentation_gate.py  embed_runtime_template.py  embed_wasm.py  final_readiness_report.py  final_release_gate.py  framework_qualification.py  generate_contract_manifest.py  generate_example_launchers.py  generate_host_api.py  generate_product_contracts.py  generate_quickjs_wasm_abi.py  generate_release_metadata.py  generate_route_wasm_provenance.py  (+50 more)
(+1275 files in other folders)
